# ferroid

./: .dockerignore  .env.dev  .gitignore  Cargo.toml  Dockerfile  README.md  rustfmt.toml
.github/workflows/: ci.yml
crates/ferroid/: BENCHMARKS.md  Cargo.toml  README.md
crates/ferroid-army/: Cargo.toml
crates/ferroid-army/benches/: bench.rs
crates/ferroid-army/src/: army.rs  lib.rs
crates/ferroid-axum/: Cargo.toml
crates/ferroid-axum/src/: server.rs
crates/ferroid-pg/: Cargo.toml  README.md  ferroid_pg.control
crates/ferroid-pg/src/: lib.rs
crates/ferroid-pg/tests/pg_regress/expected/: setup.out
crates/ferroid-tonic/: Cargo.toml  build.rs
crates/ferroid-tonic-core/: Cargo.toml  README.md  build.rs
crates/ferroid-tonic-core/proto/: ferroid.proto
crates/ferroid-tonic-core/src/: lib.rs
crates/ferroid-tonic-core/src/common/: error.rs  mod.rs  types.rs
crates/ferroid-tonic-server/: Cargo.toml  README.md
crates/ferroid-tonic-server/benches/: bench.rs
crates/ferroid-tonic-server/src/: main.rs
crates/ferroid-tonic-server/src/server/: config.rs  telemetry.rs
crates/ferroid-tonic-server/src/server/pool/: manager.rs  worker.rs
crates/ferroid-tonic-server/src/server/service/: config.rs  handler.rs  mod.rs
crates/ferroid-tonic-server/src/server/streaming/: coordinator.rs  mod.rs  processor.rs  request.rs
crates/ferroid-tonic/benches/: bench.rs
crates/ferroid-tonic/proto/: idgen.proto
crates/ferroid-tonic/src/: client.rs  common.rs  config.rs  error.rs  lib.rs  server.rs  telemetry.rs
crates/ferroid-tonic/src/client/: main.rs
crates/ferroid-tonic/src/common/: error.rs  mod.rs  result.rs  types.rs
crates/ferroid-tonic/src/server/: config.rs  main.rs  mod.rs  telemetry.rs
crates/ferroid-tonic/src/server/pool/: manager.rs  worker.rs
crates/ferroid-tonic/src/server/service/: config.rs  handler.rs  mod.rs  pool.rs  stream.rs  worker.rs
crates/ferroid-tonic/src/server/service/pool/: manager.rs  mod.rs  worker.rs
crates/ferroid-tonic/src/server/service/streaming/: coordinator.rs  mod.rs  processor.rs  request.rs
crates/ferroid-tonic/src/server/streaming/: coordinator.rs  processor.rs  request.rs
crates/ferroid-tonic/src/service/: handler.rs  mod.rs  pool.rs  request.rs  stream.rs  worker.rs
crates/ferroid/benches/: bench.rs
crates/ferroid/src/: army.rs  base32.rs  error.rs  future.rs  futures.rs  id.rs  lib.rs  mono_clock.rs  mono_clock_native.rs  mutex.rs  rand.rs  random_native.rs  status.rs  thread_random.rs  time.rs  tokio.rs
crates/ferroid/src/base32/: be_bytes.rs  crockford.rs  error.rs  interface.rs  mod.rs  snowflake.rs  ulid.rs
crates/ferroid/src/futures/: interface.rs  mod.rs  sleep_provider.rs  snowflake.rs  ulid.rs
crates/ferroid/src/futures/runtime/: mod.rs  smol.rs  smol_snowflake.rs  smol_ulid.rs  tokio.rs  tokio_snowflake.rs  tokio_ulid.rs
crates/ferroid/src/futures/runtime/smol/: mod.rs  sleep.rs  smol_ulid.rs  snowflake.rs  ulid.rs
crates/ferroid/src/futures/runtime/tokio/: mod.rs  sleep.rs  snowflake.rs  ulid.rs
crates/ferroid/src/generator/: atomic.rs  basic.rs  error.rs  interface.rs  lock.rs  mod.rs  mutex.rs  status.rs  tests.rs
crates/ferroid/src/generator/snowflake/: atomic.rs  basic.rs  interface.rs  lock.rs  mod.rs  tests.rs
crates/ferroid/src/generator/ulid/: atomic_mono.rs  basic.rs  basic_mono.rs  interface.rs  lock.rs  lock_mono.rs  mod.rs  tests.rs  thread_local.rs
crates/ferroid/src/id/: fluid.rs  id.rs  interface.rs  mod.rs  snowflake.rs  to_u64.rs  ulid.rs  utils.rs
crates/ferroid/src/rand/: interface.rs  mod.rs  thread_random.rs
crates/ferroid/src/runtime/: mod.rs  smol.rs  smol_snowflake.rs  smol_ulid.rs  tokio.rs  tokio_snowflake.rs  tokio_ulid.rs
crates/ferroid/src/serde/: error.rs  mod.rs  snowflake.rs  ulid.rs
crates/ferroid/src/time/: interface.rs  mod.rs  mono_clock.rs
crates/pg-ferroid/: Cargo.toml  README.md  pg_ferroid.control
crates/pg-ferroid/src/: lib.rs
crates/pg-ferroid/tests/pg_regress/sql/: setup.sql
crates/pg-ulid/: Cargo.toml  README.md  pg_ulid.control
crates/pg-ulid/src/: lib.rs
crates/pg-ulid/tests/pg_regress/sql/: setup.sql
