[workspace]
resolver = "3"
members = [
    "crates/ferroid",
]

[workspace.package]
version = "0.3.4"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Nick Angelou <angelou.nick@gmail.com>"]
readme = "README.md"
description = "A flexible ID generator for producing unique, monotonic, and lexicographically sortable Snowflake-style IDs."
repository = "https://github.com/s0l0ist/ferroid"
documentation = "https://docs.rs/ferroid"
keywords = ["id", "snowflake", "ulid", "uuid", "monotonic"]

[workspace.dependencies]
base32 = { version = "0.5", default-features = false }
criterion = { version = "0.6", default-features = false }
derive_more = { version = "2.0", default-features = false }
futures = { version = "0.3", default-features = false }
num_cpus = { version = "1.16", default-features = false }
pin-project-lite = { version = "0.2", default-features = false }
serde = { version = "1.0", default-features = false }
smol = { version = "2.0", default-features = false }
tokio = { version = "1.45", default-features = false }
tracing = { version = "0.1", default-features = false }