[workspace]
resolver = "3"
members = [
    "crates/ferroid",
    "crates/ferroid-tonic-core",
    "crates/ferroid-tonic-server",
    "crates/pg-ferroid",
]
default-members = [
    "crates/ferroid",
    "crates/ferroid-tonic-core",
    "crates/ferroid-tonic-server",
]

[workspace.package]
version = "1.0.2"
edition = "2024"
rust-version = "1.85.1"
license = "MIT OR Apache-2.0"
authors = ["Nick Angelou <angelou.nick@gmail.com>"]
readme = "README.md"
repository = "https://github.com/s0l0ist/ferroid"
documentation = "https://docs.rs/ferroid"

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
axum = { version = "0.8", default-features = false }
bytes = { version = "1.11", default-features = false }
clap = { version = "4.5", default-features = false }
criterion = { version = "0.7", default-features = false }
crossbeam-utils = { version = "0.8", default-features = false }
dotenvy = { version = "0.15", default-features = false }
futures = { version = "0.3", default-features = false }
hyper = { version = "1.8", default-features = false }
mimalloc = { version = "0.1", default-features = false }
opentelemetry = { version = "0.31", default-features = false }
opentelemetry-appender-log = { version = "0.31", default-features = false }
opentelemetry-otlp = { version = "0.31", default-features = false }
opentelemetry-semantic-conventions = { version = "0.31", default-features = false }
opentelemetry-stdout = { version = "0.31", default-features = false }
opentelemetry_sdk = { version = "0.31", default-features = false }
parking_lot = { version = "0.12", default-features = false }
pgrx = { version = "0.16", default-features = false }
pgrx-tests = { version = "0.16", default-features = false }
portable-atomic = { version = "1.13", default-features = false }
prost = { version = "0.14", default-features = false }
prost-types = { version = "0.14", default-features = false }
rand = { version = "0.9", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
smol = { version = "2.0", default-features = false }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.49", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
tonic = { version = "0.14", default-features = false }
tonic-health = { version = "0.14", default-features = false }
tonic-prost = { version = "0.14", default-features = false }
tonic-prost-build = { version = "0.14", default-features = false }
tonic-reflection = { version = "0.14", default-features = false }
tonic-web = { version = "0.14", default-features = false }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-opentelemetry = { version = "0.32", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
web-time = { version = "1.1", default-features = false }

[profile.bin-release]
inherits = "release"
codegen-units = 1           # reduce size and help opt
debug = "full"              # no one needs an undebuggable release binary
lto = true                  # reduce size and help opt
opt-level = 3               # optimize for perf
panic = "unwind"            # unwind and attempt to cleanup
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size substantially
incremental = true          # Improves re-compile times
