[package]
name = "ferroid-axum"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
publish = false

[[bin]]
name = "ferroid-axum-server"
path = "src/server.rs"

[[bin]] 
name = "ferroid-axum-client"
path = "src/client.rs"


[dependencies]
ferroid = { path = "../ferroid", features = ["base32", "async-tokio", "async-smol"] }
tonic = { workspace = true, features = ["prost", "transport", "router", "codegen", "zstd"] }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["http1", "tokio"] }
hyper = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
