[package]
name = "ferroid-tonic-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"
description.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
publish = true

[dependencies]
ferroid = { version = "0.4.2", path = "../ferroid", features = ["snowflake", "ulid"] }
prost = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tonic = { workspace = true, features = ["prost", "codegen"] }

[build-dependencies]
tonic-build = { workspace = true, features = ["prost"] }
