[package]
name = "ferroid-tonic-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"
description = "Shared types for the core gRPC protocol and shared types"
repository = "https://github.com/s0l0ist/ferroid/blob/main/crates/ferroid-tonic-core"
documentation.workspace = true
keywords.workspace = true
publish = true

[dependencies]
ferroid = { version = "0.4.5", path = "../ferroid", features = ["snowflake", "ulid"] }
prost = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tonic = { workspace = true, features = ["prost", "codegen"] }

[build-dependencies]
tonic-build = { workspace = true, features = ["prost"] }
