[package]
name = "ferroid-tonic-core"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"
description = "Shared types for the core gRPC protocol and shared types"
repository = "https://github.com/s0l0ist/ferroid/blob/main/crates/ferroid-tonic-core"
categories = [
  "development-tools",   # Core support crate for a larger system
  "network-programming", # Shared logic for a gRPC-based service
]
documentation.workspace = true
keywords = ["ferroid", "grpc", "snowflake", "ulid", "monotonic"]
publish = true

[dependencies]
ferroid = { version = "0.8.7", path = "../ferroid", features = ["std", "alloc", "snowflake", "basic"] }
prost = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tonic = { workspace = true, features = ["transport", "codegen"] }
tonic-prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true, features = ["cleanup-markdown", "transport"] }
