[package]
name = "ferroid-tonic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
publish = false

[[bin]]
name = "tonic-server"
path = "src/server/main.rs"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "color", "error-context", "help", "std", "suggestions", "usage"] }
dotenvy = { workspace = true }
ferroid = { path = "../ferroid" }
futures = { workspace = true }
mimalloc = { workspace = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true, features = ["semconv_experimental"] }
opentelemetry-stdout = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
prost = { workspace = true, features = ["derive", "std"] }
prost-types = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["parking_lot", "rt-multi-thread", "signal"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true, features = ["prost", "transport", "router", "codegen", "zstd", "deflate", "gzip"] }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true, features = ["server"] }
tonic-web = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["smallvec", "fmt", "ansi", "tracing-log", "std", "env-filter", "json", "chrono"] }

[build-dependencies]
tonic-build = { workspace = true, features = ["prost"] }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "bench"
harness = false

[features]
default = []
tracing = [
    "dep:tracing",
    "opentelemetry/trace",
    "opentelemetry-otlp",
    "opentelemetry-otlp/trace",
    "opentelemetry_sdk/trace",
    "opentelemetry-semantic-conventions",
    "tracing-opentelemetry"
]
metrics = [
    "opentelemetry/metrics",
    "opentelemetry-otlp",
    "opentelemetry-otlp/metrics",
    "opentelemetry_sdk/metrics",
    "opentelemetry-semantic-conventions",
    "tracing-opentelemetry/metrics"
]
stdout = [
    "opentelemetry-stdout",
    "opentelemetry-stdout/trace",
    "opentelemetry-stdout/metrics"
]
honeycomb = [
    "opentelemetry-otlp/tls",
    "opentelemetry-otlp/gzip-tonic",
    "opentelemetry-otlp/zstd-tonic",
    "opentelemetry-otlp/grpc-tonic",
    "tonic/tls-native-roots"
]