[package]
name = "pg-ferroid"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"
description = "A PostgreSQL extension for ferroid"
repository = "https://github.com/s0l0ist/ferroid/blob/main/crates/pg-ferroid"
categories = [
  "database",
]
documentation.workspace = true
keywords = ["ferroid", "postgres", "ulid", "monotonic"]
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_ferroid"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg13"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []

[dependencies]
pgrx = { workspace = true }
ferroid = { version = "1.0.0", path = "../ferroid", features = ["ulid", "thread-local", "base32"] }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
pgrx-tests = { workspace = true }
